// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductGrid renders ProductGridError correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container justify--around container--wrap--m"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="container justify--around container--wrap--m"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProductGrid renders ProductGridLoading correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container justify--around container--wrap--m"
      >
        <div
          class="g--3 g-m--4 g-s--12"
        >
          <img
            alt="spinner"
            src="spinner.gif"
            style="height: 60px; width: 60px;"
          />
        </div>
        <div
          class="g--3 g-m--4 g-s--12"
        >
          <img
            alt="spinner"
            src="spinner.gif"
            style="height: 60px; width: 60px;"
          />
        </div>
        <div
          class="g--3 g-m--4 g-s--12"
        >
          <img
            alt="spinner"
            src="spinner.gif"
            style="height: 60px; width: 60px;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container justify--around container--wrap--m"
    >
      <div
        class="g--3 g-m--4 g-s--12"
      >
        <img
          alt="spinner"
          src="spinner.gif"
          style="height: 60px; width: 60px;"
        />
      </div>
      <div
        class="g--3 g-m--4 g-s--12"
      >
        <img
          alt="spinner"
          src="spinner.gif"
          style="height: 60px; width: 60px;"
        />
      </div>
      <div
        class="g--3 g-m--4 g-s--12"
      >
        <img
          alt="spinner"
          src="spinner.gif"
          style="height: 60px; width: 60px;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProductGrid renders ProductGridSuccess correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container justify--around container--wrap--m"
      >
        <div
          class="g--3 g-m--4 g-s--12 fade-in-from-top"
        >
          <div
            class="card"
          >
            <img
              alt="Stripe dress"
              class="img-card"
              src="model5.jpg"
            />
            <div
              class="card-content"
            >
              <p
                class="card-title"
              >
                Stripe dress
              </p>
              <p
                class="card-subtitle"
              >
                300,000 VND
              </p>
              <div
                class="container justify--between g--12"
              >
                <button
                  class="btn--raised "
                >
                  More info
                </button>
                <button
                  class="btn--raised "
                >
                  Add to cart
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container justify--around container--wrap--m"
    >
      <div
        class="g--3 g-m--4 g-s--12 fade-in-from-top"
      >
        <div
          class="card"
        >
          <img
            alt="Stripe dress"
            class="img-card"
            src="model5.jpg"
          />
          <div
            class="card-content"
          >
            <p
              class="card-title"
            >
              Stripe dress
            </p>
            <p
              class="card-subtitle"
            >
              300,000 VND
            </p>
            <div
              class="container justify--between g--12"
            >
              <button
                class="btn--raised "
              >
                More info
              </button>
              <button
                class="btn--raised "
              >
                Add to cart
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
